--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "three": "0.161.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.13.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.53",
     "typescript": "5.3.3"
