--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@netlify/plugin-nextjs": "^5.13.3",
     "@types/node": "20.11.17",
     "@types/react": "18.2.53",
+    "@types/three": "^0.180.0",
     "typescript": "5.3.3"
   }
 }
